lib/tests/fixtures/compiler/parser/missing_resource_title_colon.baseline
Error: missing_resource_title_colon.pp:3:1: syntax error: expected ':' but found '}'.
  }
  ^
